# machine-translation

./: LICENSE  README.md  pyproject.toml
scripts/: 0_data_prep.py  1_train_model.py  1_train_model__command_lines.py  1_train_model__small.py  2_evaluate_model__small.py  batch.sh  batch__small.sh  model_script_for_nas.py  run_nas.py
scripts/learning_example_scripts/: tokenizing.py
src/machine_translation/: MachineTranslationModel.py  __init__.py
src/machine_translation/data/: LengthBatchSampler.py  LineIndexDataset.py  MachineTranslationDataModule.py  __init__.py
src/machine_translation/loss/: LabelSmoothingLoss.py  MaskedLoss.py  __init__.py
